2012-11-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-23
	* another run number related flashlist fix

2012-11-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-22
	* bugfix of V00-02-21 flashlist run number value

2012-11-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-21
	* fixed run number value in flashlist

2012-11-15 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-20
	* changed flashlist name

2012-10-14 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-19
	* separate folders for module info and tables
	* cpu usage plots promoted to the top of the page
	* Total input rate 1D plot
	* EventInfo runStartTimeStamp, and other default ME-s added
	* CPU usage flashlist

2012-10-11 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-18
	* EventInfo information
	* detect and print mismatch in dataset information
	* cleanup when Halting

2012-09-02 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-17
	* datasets rates (depends on Utilities,Modules,Processor changes)
	* fix a bug with integer division instead of FP

2012-08-28 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-16
	* correct normalization for projected CPU usage
	* correct weight factor for C6220 with 16 slave EP's
	* removed histograms for BUFUs with 22 slave EP's
	* histogram for busy from /proc/stat
	* two tables with uncorrected CPU usage
	* update runNumber in title before writing files
	* save also time-based root files for DQM archiving

2012-08-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-15
	* dqm output files writable by default
	  (so that archiving script can delete them after it is done)

2012-08-21 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-14
	* fix deleting dequeues
	* make a copy of module statistics before applying sort
	* destroying Streams histograms on Stop

2012-08-20 Srecko Morovic <srecko.morovic@cern.ch>

	* tag V00-02-13
	* catching all kinds of exception in postEntry(iChoke)